--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "stylelint-config-standard": "21.x",
+    "stylelint-csstree-validator": "1.x",
+    "stylelint-scss": "3.x",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
