--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "stylelint-config-standard": "21.x",
-    "stylelint-csstree-validator": "1.x",
-    "stylelint-scss": "3.x",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,10 +48,22 @@
     ]
   },
   "main": "index.js",
-  "repository": "git@github.com:zeff96/hello_react_front_end.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/zeff96/hello_react_front_end.git"
+  },
   "author": "zeff96 <zeffo1975@gmail.com>",
   "license": "MIT",
+  "description": "<div align=\"center\">",
+  "bugs": {
+    "url": "https://github.com/zeff96/hello_react_front_end/issues"
+  },
+  "homepage": "https://github.com/zeff96/hello_react_front_end#readme",
+  "keywords": [],
   "devDependencies": {
-    "stylelint": "^15.10.1"
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
